--- a/1번 문제.md
+++ b/1번 문제.md
@@ -1,1 +1,7 @@
+동시에 같은 DB Table row 를 업데이트 하는 상황을 방어하기 위해 어떻게 개발하실 건지 설명해주세요.
 
+동시에 같은 row를 업데이트 하는 상황은 Lost Update Problem 이라고 해서 두 명의 유저가 동시에 업데이트를 하여 한 사람의 수정사항이 덮어써져서 없어지는 문제를 말하는 것 같습니다.
+해당 상황에서는 DB row에 대해 lock을 걸어서 수정을 한 사람만 할 수 있도록 보장을 해주는 방식으로 개발을 진행해야 합니다.
+lock에는 Optimistic lock과 Pessimistic lock이 있는데 
+Optimistic lock은 application code에서 db row의 version 관리를 하여 수정 전과 수정 후의 version이 일치할때(즉, 다른 유저가 변경하지 않았을 때)만 수정사항을 업데이트 합니다.
+Pessimistic lock은 Database에서 lock을 지원해주는 방법으로 한 유저의 요청으로 db row를 수정하고 있으면 다른 수정은 row에 접근하지 못하게 막습니다.
