--- a/3번 문제.md
+++ b/3번 문제.md
@@ -1,1 +1,9 @@
-
+웹 브라우저에 www.naver.com를 치면
+1. DNS 서버를 통해 도메인에 해당하는 ip 주소 확인
+2. ip 주소를 라우팅 테이블에서 찾은 다음 어떤 경로로(hop-by-hop) 요청을 전달해야 하는지를 확인
+3. 패킷 송신
+4. 패킷이 여러 LAN을 거쳐 위의 ip를 가진 서버에 도달
+5. 캐시서버가 있다면, GET www.naver.com에 해당하는 데이터의 캐시가 있는지 캐시서버를 확인
+6. 없다면 어플리케이션 서버에 해당 http api 요청 수행
+7. 애플리케이션에서 DB 조회하여 데이터 조회
+8. 페이지에 동적인 데이터를 넣은 채워 넣은 뒤 페이지 반환
