--- a/2번 문제.md
+++ b/2번 문제.md
@@ -1,1 +1,5 @@
+TCP와 UDP의 차이를 작성해주세요.
 
+TCP는 3-way handshake를 통해서 connection 을 맺고, 맺어진 connection을 통해 패킷을 전송할 때, 서버측에서 받았다는 응답을 클라이언트에게 보내기 때문에 안전하게 데이터 전송이 가능합니다. 만약에 패킷을 받았다는 응답이 서버로부터 오지 않는다면 패킷을 재전송하기 때문에 네트워크 환경이 좋지 않은 경우 데이터 전송 속도가 느릴 수 있습니다.
+
+반면 UDP는 데이터를 잘 받았는지를 확인하는 응답을 내려주지 않기에 클라이언트 측에서 데이터를 연속적으로 보내기만 합니다. 그래서 데이터 손실이 일어날 수 있지만 대신 전송하는 속도는 더 빠르게 됩니다. 주로 영상 스트리밍과 같은 조그마한 데이터 손실은 큰 의미가 없고, 실시간 데이터 전송이 중요한 상황에서 사용되게 됩니다.
