--- a/4번 문제.md
+++ b/4번 문제.md
@@ -1,1 +1,5 @@
+본인이 주력으로 사용하는 언어에서 설계적 결함 한 가지를 작성해주세요.
 
+Java의 설계적 결함
+- JVM 위에서 돌기 때문에 기계어로 compile되는 언어보다는 성능 오버헤드가 존재함
+- Garbage Collection이 모든 사용하지 않는 객체들을 삭제해야 할 때 Garbage Collection Thread를 제외한 다른 모든 스레드를 정지시키고 객체들으르 하나씩 살펴보며 사용하지 않는 객체를 mark함. 이로 인한 성능 저하가 존재함
