--- a/5번 문제.md
+++ b/5번 문제.md
@@ -1,1 +1,3 @@
+본인이 주력으로 사용하는 언어에서 자료구조와 관련 된 클래스가 내부적으로 어떻게 동작하는지 한 가지 사례를 정하여 작성해주세요. ex) ArrayList, HashMap 등등
 
+ArrayList는 내부적으로 Object의 배열을 사용하고, 처음에는 특정한 크기의 배열을 할당한 뒤, add를 하면서 배열의 크기보다 커질 때 더 큰 size의 배열을 만들고 해당 배열에 값들을 복사를 진행함.
